--- a/BudsApplication/test-output/old/Suite/methods-alphabetical.html
+++ b/BudsApplication/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1e494">  <td>24/07/03 18:38:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_DesignatedCourt.LoginDesignatedCourt()[pri:0, instance:BudsLogin.Login_DesignatedCourt@4659191b]">LoginDesignatedCourt</td> 
-  <td>TestNG-tests-3@1120087605</td>   <td></td> </tr>
-<tr bgcolor="916da3">  <td>24/07/03 18:38:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Deposit_Taker.loginApplication()[pri:0, instance:BudsLogin.Login_Deposit_Taker@26e356f0]">loginApplication</td> 
-  <td>TestNG-tests-2@1197550152</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>24/07/03 18:38:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Competent_Authority.loginCompetentAuthority()[pri:0, instance:BudsLogin.Login_Competent_Authority@383bfa16]">loginCompetentAuthority</td> 
-  <td>TestNG-tests-1@1982806382</td>   <td></td> </tr>
-<tr bgcolor="93a5cd">  <td>24/07/03 18:38:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Regulator.loginRegulator()[pri:0, instance:BudsLogin.Login_Regulator@29215f06]">loginRegulator</td> 
-  <td>TestNG-tests-4@1720152811</td>   <td></td> </tr>
+<tr bgcolor="b9797b">  <td>24/07/04 11:43:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_DesignatedCourt.LoginDesignatedCourt()[pri:0, instance:BudsLogin.Login_DesignatedCourt@4b0d79fc]">LoginDesignatedCourt</td> 
+  <td>TestNG-tests-3@1424916656</td>   <td></td> </tr>
+<tr bgcolor="e3b6f0">  <td>24/07/04 11:43:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Deposit_Taker.loginApplication()[pri:0, instance:BudsLogin.Login_Deposit_Taker@4b8ee4de]">loginApplication</td> 
+  <td>TestNG-tests-2@65638755</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/07/04 11:43:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Competent_Authority.loginCompetentAuthority()[pri:0, instance:BudsLogin.Login_Competent_Authority@53fdffa1]">loginCompetentAuthority</td> 
+  <td>TestNG-tests-1@1907271611</td>   <td></td> </tr>
+<tr bgcolor="81bf66">  <td>24/07/04 11:43:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Regulator.loginRegulator()[pri:0, instance:BudsLogin.Login_Regulator@4efac082]">loginRegulator</td> 
+  <td>TestNG-tests-4@1810537074</td>   <td></td> </tr>
 </table>
