--- a/BudsApplication/test-output/emailable-report.html
+++ b/BudsApplication/test-output/emailable-report.html
@@ -8,11 +8,21 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,705</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">TestRunner3</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">94,529</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">TestRunner4</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">96,438</td><td></td><td></td></tr>
+<tr><td><a href="#t2">TestRunner2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">100,524</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">TestRunner1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">102,097</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">393,588</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">AdminPortal.BudAdminViewPasswordButtonFunctionality</td><td><a href="#m0">viewPasswordFunctionalityTest</a></td><td rowspan="1">1720069144843</td><td rowspan="1">18013</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestRunner3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">BudsLogin.Login_DesignatedCourt</td><td><a href="#m0">LoginDesignatedCourt</a></td><td rowspan="1">1720073607273</td><td rowspan="1">94428</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">TestRunner4 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">BudsLogin.Login_Regulator</td><td><a href="#m1">loginRegulator</a></td><td rowspan="1">1720073607273</td><td rowspan="1">96377</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">TestRunner2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">BudsLogin.Login_Deposit_Taker</td><td><a href="#m2">loginApplication</a></td><td rowspan="1">1720073607273</td><td rowspan="1">100465</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">TestRunner1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">BudsLogin.Login_Competent_Authority</td><td><a href="#m3">loginCompetentAuthority</a></td><td rowspan="1">1720073607273</td><td rowspan="1">102036</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">AdminPortal.BudAdminViewPasswordButtonFunctionality#viewPasswordFunctionalityTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestRunner3</h2><h3 id="m0">BudsLogin.Login_DesignatedCourt#LoginDesignatedCourt</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestRunner4</h2><h3 id="m1">BudsLogin.Login_Regulator#loginRegulator</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestRunner2</h2><h3 id="m2">BudsLogin.Login_Deposit_Taker#loginApplication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestRunner1</h2><h3 id="m3">BudsLogin.Login_Competent_Authority#loginCompetentAuthority</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
