--- a/BudsApplication/test-output/old/Suite/toc.html
+++ b/BudsApplication/test-output/old/Suite/toc.html
@@ -20,33 +20,33 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner1 (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TestRunner1 (1/0/0)</td><td valign='top' align='right'>
   <a href='TestRunner1.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner2 (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TestRunner2 (1/0/0)</td><td valign='top' align='right'>
   <a href='TestRunner2.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner3 (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TestRunner3 (1/0/0)</td><td valign='top' align='right'>
   <a href='TestRunner3.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TestRunner4 (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TestRunner4 (1/0/0)</td><td valign='top' align='right'>
   <a href='TestRunner4.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
