--- a/BudsApplication/test-output/old/Default suite/classes.html
+++ b/BudsApplication/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>BudsLogin.Login_Competent_Authority</td>
+<td>BudsLogin.Login_Deposit_Taker</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginCompetentAuthority</td>
+<td>loginApplication</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
